WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315370
Dots for photo galleries on lemonde.fr repaint incorrectly with zoom
https://bugs.webkit.org/show_bug.cgi?id=315370
Summary
Dots for photo galleries on lemonde.fr repaint incorrectly with zoom
Simon Fraser (smfr)
Reported
2026-05-22 11:18:44 PDT
There's a repaint bug on the dots in photo galleries on lemonde.fr.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2026-05-22 11:18:56 PDT
<
rdar://176665892
>
Simon Fraser (smfr)
Comment 2
2026-05-22 11:19:04 PDT
There are two variants of the repaint bug here. Both involve a renderer gaining a RenderLayer as the same time as its size changing and failing to repaint the old state. One occurs when the new state involves compositing; there’s a repaint failure in RenderLayerCompositor::updateExplicitBacking() there. The other is reproducible when disabling compositing for opacity animations; that will require a fix in RenderLayerModelObject::styleDidChange() or related code.
Simon Fraser (smfr)
Comment 3
2026-05-22 11:28:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65491
EWS
Comment 4
2026-05-28 08:32:41 PDT
Committed
314039@main
(5885f16b5d2d): <
https://commits.webkit.org/314039@main
> Reviewed commits have been landed. Closing PR #65491 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug